<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.acme.push.activity.MainActivity"
    tools:showIn="@layout/activity_main">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/edtUsername"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/username" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/btnRegister"
        android:layout_below="@+id/edtUsername"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unregister"
        android:id="@+id/btnUnregister"
        android:layout_below="@+id/edtUsername"
        android:layout_toRightOf="@+id/btnRegister"
        android:layout_toEndOf="@+id/btnRegister" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/edtLog"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/edtUsername"
        android:gravity="top"
        android:hint="@string/last_message"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/btnRegister" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:id="@+id/btnClear"
        android:layout_below="@+id/edtUsername"
        android:layout_toRightOf="@+id/btnUnregister"
        android:layout_toEndOf="@+id/btnUnregister" />
</RelativeLayout>
